--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@babel/preset-env": "^7.9.5",
     "@babel/preset-react": "^7.9.4",
     "babel-loader": "^8.1.0",
+    "morgan": "^1.10.0",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11"
   }
