--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Jim Walter",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "react": "^16.13.1",
