--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "yelp-fusion": "^3.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
